--- a/templates/result_popup.html
+++ b/templates/result_popup.html
@@ -99,8 +99,8 @@
     <div class="popup">
         <h1>🎄 Secret Santa Result 🎄</h1>
         <div class="result">
-            <p>Dear {{ current_person }},</p>
-            <p>You are {{ chosen_friend }}'s Secret Santa! 🎁</p>
+            <!-- <p>Number {{ current_number }},</p> -->
+            <p>Your Secret Santa Gift Number is {{ chosen_number }}! 🎁</p>
         </div>
         <div class="message">
             Remember to keep it a secret! 🤫
