--- a/templates/index.html
+++ b/templates/index.html
@@ -127,7 +127,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>🎄 Secret Santa Picker 🎄</h1>
+        <h1> MVP</h1>
+        <h1>🎄 Secret Santa 🎄</h1>
         
         <div class="input-group">
             <form action="/pick_number" method="post">
