--- a/templates/index.html
+++ b/templates/index.html
@@ -157,7 +157,7 @@
             {% if has_picked %}
                 <div class="waiting-message">
                     You have already picked your number!<br>
-                    Your number is: {{ picked_number }}<br>
+                    Your gift number is: {{ gift_number }}<br>
                     Please wait for everyone else to pick their numbers.
                 </div>
             {% elif waiting_for_admin %}
